# advansystalentcopilot

AdvansysTalentCopilot-main/: JobDesription.txt  MySQLTool.py  README.md  Setting up crew ai  hi.py
AdvansysTalentCopilot-main/talentcopilot/: README.md  Requirements.txt  pyproject.toml
AdvansysTalentCopilot-main/talentcopilot/Database/: DatabaseScript.sql
AdvansysTalentCopilot-main/talentcopilot/postgres-file/: postgres-demo.py
AdvansysTalentCopilot-main/talentcopilot/src/talentcopilot/: crew.py  crew_cohere_test.py  extract_crew.py  first_crew_test.py  flow.py  main.py  testbara.py
AdvansysTalentCopilot-main/talentcopilot/src/talentcopilot/config/: agents.yaml  analyzer_agents  analyzer_tasks.yaml  llm_config_.yaml  screening_agent.yaml  screening_task.yaml  tasks.yaml
AdvansysTalentCopilot-main/talentcopilot/src/talentcopilot/output/: candidate_data.json  error_pdf_report.md
AdvansysTalentCopilot-main/talentcopilot/src/talentcopilot/tools/: custom_tool.py  cv_parser_tools.py
